Fixed images overstretching on mobile screen

--- a/css/contact.css
+++ b/css/contact.css
@@ -197,7 +197,6 @@ input[type="radio"]:checked + label {
 
   #header img.man {
     margin: 20px 0;
-    height: 80%;
   }
 }
 
