--- a/css/works.css
+++ b/css/works.css
@@ -140,7 +140,6 @@ body {
 
   #header img.man {
     margin: 20px 0;
-    height: 80%;
   }
 
   #works h3 {
